--- a/src/index.html
+++ b/src/index.html
@@ -12,3 +12,16 @@
   <app-root></app-root>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <title>Twitter App</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="css/app.css">
+    </head>
+    <body>
+        <app-root></app-root>
+    </body>
+</html>
